Move z-index panel placeholder and border-radius and margins fixes

--- a/components/input-group/_input-group.scss
+++ b/components/input-group/_input-group.scss
@@ -17,7 +17,7 @@
   > input {
     &:hover,
     &:focus {
-      z-index: 2;
+      // z-index: 2;
     }
   }
 
